--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/u1496746/public_html/jantungdesa.com
-    - /bin/cp -R $DEPLOYPATH
+    - /bin/cp $DEPLOYPATH
